--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "eznv"
+name = "vikeypass"
 version = "0.1.0"
 edition = "2021"
 
@@ -13,3 +13,4 @@ serde_json = "1.0"
 chrono = "0.4.23"
 arboard = "3.2.0"
 keyring = "2.0.1"
+magic-crypt = "3.1.12"
